<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/topAppBar"
            style="@style/AppSecondToolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="?attr/actionBarSize"
            app:title="@string/title_audio"
            app:titleCentered="true"
            app:navigationIcon="@drawable/ic_arrow_back"
            />

    </com.google.android.material.appbar.AppBarLayout>

    <!-- Note: A RecyclerView can also be used -->
    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginHorizontal="@dimen/spacing_horizontal"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <com.google.android.material.card.MaterialCardView
            style="@style/AppMainCardView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.imageview.ShapeableImageView
                    android:id="@+id/image"
                    android:layout_width="0dp"
                    android:layout_height="@dimen/size_height_image_card"
                    android:scaleType="centerCrop"
                    android:src="@drawable/ic_masaje_facial"
                    app:layout_constraintEnd_toEndOf="@id/title"
                    app:layout_constraintStart_toStartOf="@id/title"
                    app:layout_constraintTop_toTopOf="parent" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/title"
                    style="@style/AppTitleCard"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/spacing_horizontal"
                    android:text="@string/title_data"
                    android:paddingBottom="10dp"
                    android:layout_marginTop="10dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/image"
                    />

               <androidx.cardview.widget.CardView
                   android:id="@+id/other_data"
                   android:layout_width="match_parent"
                   android:layout_height="match_parent"
                   app:layout_constraintTop_toBottomOf="@id/title"
                   >
                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:layout_marginBottom="5dp"
                        >
                        <com.google.android.material.textview.MaterialTextView
                            android:layout_marginStart="20dp"
                            android:layout_marginEnd="20dp"
                            android:id="@+id/title_factory"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/title_factory"
                            android:drawablePadding="10dp"
                            android:drawableStart="@drawable/ic_factory"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent"
                            />
                        <com.google.android.material.textview.MaterialTextView
                            android:layout_marginStart="20dp"
                            android:layout_marginEnd="20dp"
                            android:id="@+id/title_email"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/title_email"
                            android:drawablePadding="10dp"
                            android:drawableStart="@drawable/ic_email"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@id/title_factory"
                            />
                        <com.google.android.material.textview.MaterialTextView
                            android:layout_marginStart="20dp"
                            android:layout_marginEnd="20dp"
                            android:id="@+id/title_telefono"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/title_phone"
                            android:drawablePadding="10dp"
                            android:drawableStart="@drawable/ic_phone"
                            android:drawableEnd="@drawable/ic_browser"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@id/title_email"
                            />
                        <com.google.android.material.textview.MaterialTextView
                            android:layout_marginStart="20dp"
                            android:layout_marginEnd="20dp"
                            android:id="@+id/title_web"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/title_web"
                            android:drawablePadding="10dp"
                            android:drawableStart="@drawable/ic_web"
                            android:drawableEnd="@drawable/ic_browser"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@id/title_telefono"
                            />




                    </androidx.constraintlayout.widget.ConstraintLayout>
               </androidx.cardview.widget.CardView>
            </androidx.constraintlayout.widget.ConstraintLayout>
        </com.google.android.material.card.MaterialCardView>
    </androidx.core.widget.NestedScrollView>
</androidx.coordinatorlayout.widget.CoordinatorLayout>

